force-app/main/default/objects/VIAchat__c/VIAchat__c.object-meta.xml
<CustomObject>
    <label>Dépense</label>
    <nameField>
        <label>Ref d&apos;achat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dépenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>