force-app/main/default/objects/VIAchat__c/fields/CommandeC__c.field-meta.xml
<CustomField>
    <fullName>CommandeC__c</fullName>
    <label>CommandéC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>