force-app/main/default/objects/VIAchat__c/fields/CommandeC_E__c.field-meta.xml
<CustomField>
    <fullName>CommandeC_E__c</fullName>
    <label>CommandéC €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>