force-app/main/default/objects/VIAchat__c/fields/CommandeD__c.field-meta.xml
<CustomField>
    <fullName>CommandeD__c</fullName>
    <label>CommandéD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>