force-app/main/default/objects/VIAchat__c/fields/CommandeD_E__c.field-meta.xml
<CustomField>
    <fullName>CommandeD_E__c</fullName>
    <label>CommandéD €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>