force-app/main/default/objects/VIAchat__c/fields/CommandeI__c.field-meta.xml
<CustomField>
    <fullName>CommandeI__c</fullName>
    <label>CommandéI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>