force-app/main/default/objects/VIAchat__c/fields/CommandeI_E__c.field-meta.xml
<CustomField>
    <fullName>CommandeI_E__c</fullName>
    <label>CommandéI €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>