force-app/main/default/objects/VIAchat__c/fields/ComptabiliseC__c.field-meta.xml
<CustomField>
    <fullName>ComptabiliseC__c</fullName>
    <label>ComptabiliséC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>