force-app/main/default/objects/VIAchat__c/fields/ComptabiliseC_E__c.field-meta.xml
<CustomField>
    <fullName>ComptabiliseC_E__c</fullName>
    <label>ComptabiliséC €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>