force-app/main/default/objects/VIAchat__c/fields/ComptabiliseD__c.field-meta.xml
<CustomField>
    <fullName>ComptabiliseD__c</fullName>
    <label>ComptabiliséD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>