force-app/main/default/objects/VIAchat__c/fields/ComptabiliseD_E__c.field-meta.xml
<CustomField>
    <fullName>ComptabiliseD_E__c</fullName>
    <label>ComptabiliséD €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>