force-app/main/default/objects/VIAchat__c/fields/ComptabiliseI__c.field-meta.xml
<CustomField>
    <fullName>ComptabiliseI__c</fullName>
    <label>ComptabiliséI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>