force-app/main/default/objects/VIAchat__c/fields/ComptabiliseI_E__c.field-meta.xml
<CustomField>
    <fullName>ComptabiliseI_E__c</fullName>
    <label>ComptabiliséI €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>