force-app/main/default/objects/VIAchat__c/fields/CompteGeneral__c.field-meta.xml
<CustomField>
    <fullName>CompteGeneral__c</fullName>
    <label>Compte général</label>
    <length>255</length>
    <type>Text</type>
</CustomField>