force-app/main/default/objects/VIAchat__c/fields/Date_de_comptabilisation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_comptabilisation__c</fullName>
    <label>Date de comptabilisation</label>
    <type>Date</type>
</CustomField>