force-app/main/default/objects/VIAchat__c/fields/Description_de_la_commande__c.field-meta.xml
<CustomField>
    <fullName>Description_de_la_commande__c</fullName>
    <label>Description de la commande</label>
    <length>255</length>
    <type>Text</type>
</CustomField>