force-app/main/default/objects/VIAchat__c/fields/Nom_du_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_fournisseur__c</fullName>
    <label>Nom du fournisseur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>