force-app/main/default/objects/VIAchat__c/fields/num_fac__c.field-meta.xml
<CustomField>
    <fullName>num_fac__c</fullName>
    <label>Numéro Facture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>