force-app/main/default/objects/VIAchat__c/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>