force-app/main/default/objects/VIAchat__c/fields/Periode_comptable__c.field-meta.xml
<CustomField>
    <fullName>Periode_comptable__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Période comptable</label>
    <referenceTo>VIPeriode__c</referenceTo>
    <relationshipName>Achats</relationshipName>
    <type>Lookup</type>
</CustomField>