force-app/main/default/objects/VIAchat__c/fields/Statut_periode_comptable__c.field-meta.xml
<CustomField>
    <fullName>Statut_periode_comptable__c</fullName>
    <formula>text(Periode_comptable__r.Statut__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut période comptable</label>
    <type>Text</type>
</CustomField>