force-app/main/default/objects/VIAchat__c/fields/Type_depense__c.field-meta.xml
<CustomField>
    <fullName>Type_depense__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Type de dépense</label>
    <referenceTo>VIType_de_depense__c</referenceTo>
    <relationshipName>Achats</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>